--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# BACKEND
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.pyc
@@ -29,17 +30,51 @@ share/python-wheels/
 *.egg
 MANIFEST
 
-# Flask env
-instance/
-
-# PyCharm files
-.idea/
-
 # Compiled Python files
 *.pyc
 
 # Logs
 *.log
 
-# Other
 
+# FRONTEND
+# Dependencies
+/node_modules
+
+# Compiled output
+/build
+/dist
+/.svelte-kit
+/functions
+
+# Environment Variables
+.env
+.env.*.local
+
+# IDEs and Editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Node.js logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Coverage directory used by tools like Istanbul
+/coverage
+
+# IDEs
+# Local History for Visual Studio Code
+.history/
+
+# PyCharm files
+.idea/
